# libgdx-64kb-support

.github/workflows/: android-build.yml  box2d-build.yml
extensions/gdx-box2d/gdx-box2d/: build.gradle
extensions/gdx-box2d/gdx-box2d/jni/Box2D/: CMakeLists.txt‎
gdx/: build.gradle
gdx/jni/: CMakeLists.txt
